[audit]: List questions in examiner console that have been audited by others ..
It is now upto the examiner to review the issue ( reported via e-mail ), make
any necessary changes and then re-submit the question for inclusion.

Right now, only questions with gating issues are shown. Basis for finding
pending audits will need to be changed to include non-gating issues too.

--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -497,6 +497,7 @@ tab-audit-review :
 
 tab-audit-close : 
   url : 
+    self : audit/close
     panel : question/preview.json?id=:id
 
 tab-resolution-pending :
