Added menu for pending videos so that the JPEG of the first page can be downloaded ...
The question text can be extracted from the JPEG and overlaid onto the video.

--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -512,6 +512,9 @@ btn-upload-video-solution :
   show : 
     modal : m-upload-video-solution
 
+lnk-download-pg-1 : 
+  update-on: question/preview
+  
 ##############################################################################
 ## Shared between Teachers, Examiners and Admin
 ##############################################################################
