Perhaps ajax: disabled is needed after all by lnk-download-pg-1

--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -514,6 +514,7 @@ btn-upload-video-solution :
 
 lnk-download-pg-1 : 
   update-on: question/preview
+  ajax : disabled
   
 ##############################################################################
 ## Shared between Teachers, Examiners and Admin
