--- a/test/fixtures/accounts.yml
+++ b/test/fixtures/accounts.yml
@@ -25,6 +25,7 @@
 #  postal_code            :string(10)
 #  latitude               :float
 #  longitude              :float
+#  authentication_token   :string(255)
 #
 
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
