added ability to add a new examiner

--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -515,6 +515,10 @@ btn-upload-video-solution :
 lnk-download-pg-1 : 
   update-on: question/preview
   ajax : disabled
+
+lnk-add-examiner : 
+  show : 
+    modal : m-new-examiner
   
 ##############################################################################
 ## Shared between Teachers, Examiners and Admin
