[audit]: Changed nomenclature
An audit is in one of three states
  1. to-do ( by someone other than the author )
  2. review ( to be done by the author )
  3. close ( once reviewed by the author )

--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -490,14 +490,14 @@ lnk-audit-form :
   show : 
     modal : m-audit-form
 
-tab-audit-review : 
+tab-audit-todo : 
   url : 
-    self : audit/pending
+    self : audit/todo
     panel : question/preview.json?id=:id
 
-tab-audit-close : 
+tab-audit-review : 
   url : 
-    self : audit/close
+    self : audit/review
     panel : question/preview.json?id=:id
 
 tab-resolution-pending :
