[audit]: A single item menu added ...
An audit can be closed - and question made available again - by clicking
on Close in this menu

--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -383,6 +383,9 @@ tab-teacher-accounts :
 ## Admin / Examiner specific  
 ##############################################################################
 
+lnk-audit-done : 
+  update-on: question/preview
+
 m-admin-wb :
   show : 
     menu : admin-wb
