[quiz-sharing]: First draft of ability to let teachers share quizzes w/ each other
If A wants to share a quiz with B, then a clone of the quiz is created
in B's account with B's teacher_id

--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -311,6 +311,10 @@ lnk-qzb-filter :
   show : 
     menu : qzb-filter
 
+lnk-share-quiz : 
+  show : 
+    modal : m-share-quiz
+
 ##############################################################################
 ## Students 
 ##############################################################################
