Downloadable Report Card - Teachers can download test report cards as a csv file which is opened by Excel by default on Windows

--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -195,6 +195,10 @@ tab-tc-rc-3 :
   show : 
     wide : wide-X
 
+lnk-rc-download :
+  ajax : disabled
+  update-on : ws/summary
+
 lnk-tc-rc :
   show : 
     left : left-5
