--- a/test/fixtures/q_selections.yml
+++ b/test/fixtures/q_selections.yml
@@ -10,6 +10,7 @@
 #  updated_at  :datetime
 #  index       :integer
 #  end_page    :integer
+#  shadow      :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
