Contiguous layout: Tracking page-breaks on individual QSelections
This directly impacts calculations for determining whether or not a graded
response is on a specific page or not

And that, in turn, impacts operations like receive_scan

The fickleness of the QR-code scheme is going to bite us hard in the behind

--- a/test/fixtures/q_selections.yml
+++ b/test/fixtures/q_selections.yml
@@ -11,6 +11,7 @@
 #  index       :integer
 #  end_page    :integer
 #  shadow      :integer
+#  page_breaks :string(10)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
