--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -94,8 +94,8 @@ lnk-wsb-existing :
 
 tab-wsb-existing :
   url : 
-    self : quiz/testpapers.json?id=:prev
-    panel : testpaper/load?id=:id
+    self : quiz/exams.json?id=:prev
+    panel : exam/load?id=:id
   prev : tab-wsb-quizzes
 
 tab-wsl-quizzes :
@@ -104,7 +104,7 @@ tab-wsl-quizzes :
 
 lnk-ws-download :
   ajax : disabled
-  update-on : testpaper/load
+  update-on : exam/load
 
 lnk-download-solution :
   notouch : true
