--- a/test/fixtures/quizzes.yml
+++ b/test/fixtures/quizzes.yml
@@ -13,6 +13,7 @@
 #  span          :integer
 #  parent_id     :integer
 #  job_id        :integer         default(-1)
+#  uid           :string(40)
 #
 
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
