--- a/test/fixtures/graded_responses.yml
+++ b/test/fixtures/graded_responses.yml
@@ -9,11 +9,11 @@
 #  examiner_id    :integer
 #  q_selection_id :integer
 #  marks          :float
-#  exam_id        :integer
 #  scan           :string(40)
 #  subpart_id     :integer
 #  page           :integer
 #  feedback       :integer         default(0)
+#  worksheet_id   :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
