Humungous changes - too many to list individually ...
But basically, there is now a new mint/ structure and a new QR code
scheme

--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -106,7 +106,7 @@ lnk-ws-download :
   ajax : disabled
   update-on : exam/load
 
-lnk-download-solution :
+lnk-download-* :
   notouch : true
   ajax : disabled
   update-on : quiz/preview 
