--- a/config/gutenberg.yml
+++ b/config/gutenberg.yml
@@ -9,6 +9,9 @@ operations : &tasks
   rotate_scan : http://gutenberg/blocs/rotateScan
   fetch_unresolved_scans : http://gutenberg/blocs/fetchUnresolvedScans
   resolve_scan : http://gutenberg/blocs/resolveScan
+  write_tex : http://gutenberg/blocs/writeTex
+  compile_tex : http://gutenberg/blocs/compileTex
+  error_out: http://gutenberg/blocs/errorOut
 
 development : &non_production_settings
   axis2 : http://localhost:8080/axis2/services/documentMaster
