--- a/test/fixtures/quizzes.yml
+++ b/test/fixtures/quizzes.yml
@@ -14,6 +14,7 @@
 #  parent_id     :integer
 #  job_id        :integer         default(-1)
 #  uid           :string(40)
+#  version       :string(10)
 #
 
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
