Shadow calculated during layout and stored in the quiz itself

--- a/test/fixtures/quizzes.yml
+++ b/test/fixtures/quizzes.yml
@@ -15,6 +15,7 @@
 #  job_id        :integer         default(-1)
 #  uid           :string(40)
 #  version       :string(10)
+#  shadows       :string(255)
 #
 
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
