--- a/test/fixtures/graded_responses.yml
+++ b/test/fixtures/graded_responses.yml
@@ -14,6 +14,7 @@
 #  page           :integer
 #  feedback       :integer         default(0)
 #  worksheet_id   :integer
+#  mobile         :boolean         default(FALSE)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
