Sharpened quiz layout and recompilation logic

--- a/test/fixtures/quizzes.yml
+++ b/test/fixtures/quizzes.yml
@@ -2,20 +2,22 @@
 #
 # Table name: quizzes
 #
-#  id            :integer         not null, primary key
-#  teacher_id    :integer
-#  created_at    :datetime
-#  updated_at    :datetime
-#  num_questions :integer
-#  name          :string(70)
-#  subject_id    :integer
-#  total         :integer
-#  span          :integer
-#  parent_id     :integer
-#  job_id        :integer         default(-1)
-#  uid           :string(40)
-#  version       :string(10)
-#  shadows       :string(255)
+#  id                    :integer         not null, primary key
+#  teacher_id            :integer
+#  created_at            :datetime
+#  updated_at            :datetime
+#  num_questions         :integer
+#  name                  :string(70)
+#  subject_id            :integer
+#  total                 :integer
+#  span                  :integer
+#  parent_id             :integer
+#  job_id                :integer         default(-1)
+#  uid                   :string(40)
+#  version               :string(10)
+#  shadows               :string(255)
+#  page_breaks_after     :string(30)
+#  switch_versions_after :string(30)
 #
 
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
