--- a/test/fixtures/rate_codes.yml
+++ b/test/fixtures/rate_codes.yml
@@ -1,10 +1,11 @@
 # == Schema Information
 #
-# Table name: cost_codes
+# Table name: rate_codes
 #
 #  id           :integer         not null, primary key
-#  description  :text
-#  subscription :boolean
+#  cost_code_id :integer
+#  value        :integer
+#  currency     :string(3)
 #  created_at   :datetime        not null
 #  updated_at   :datetime        not null
 #
@@ -12,9 +13,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  description: MyText
-  subscription: false
+  cost_code_id: 1
+  value: 1
+  currency: MyString
 
 two:
-  description: MyText
-  subscription: false
+  cost_code_id: 1
+  value: 1
+  currency: MyString
