[Big]: Changed the way sektions are created ...
We now ask for the sektion name, its expected lifetime and whether or
not it should be auto-renewed.

Once this initial information is given, the system can take care of
the rest. For example, the system can create a new sektion once the old
one expires

--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -315,6 +315,10 @@ lnk-share-quiz :
   show : 
     modal : m-share-quiz
 
+lnk-sk-add-std :
+  show: 
+    modal : m-new-sk-2
+
 ##############################################################################
 ## Students 
 ##############################################################################
