--- a/test/fixtures/aggr_by_topics.yml
+++ b/test/fixtures/aggr_by_topics.yml
@@ -1,11 +1,11 @@
 # == Schema Information
 #
-# Table name: aggr_teacher_topics
+# Table name: aggr_by_topics
 #
 #  id              :integer         not null, primary key
+#  topic_id        :integer
 #  aggregator_id   :integer
 #  aggregator_type :string(20)
-#  topic_id        :integer
 #  benchmark       :float
 #  average         :float
 #  attempts        :integer
