Delayed::Job tracking ....
The bell is back !! Now, when a quiz or an exam compiles, the relevant PDF
is made available for direct download in the menu under the blinking bell

Also, on signin, tracking of any quizzes or exams still in the queue
or those that were made today begins

--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -28,6 +28,10 @@
 ## Teachers 
 ##############################################################################
 
+lnk-bell :
+  show :
+    menu : m-bell
+
 lnk-courses : 
   show :
     menu : m-courses
