Defined the concept of 'live' for Examiners ...
A 'live' examiner is one who has passed the mentorship program and can
now be given work for grading

This is a different concept from an 'active' account in that an
'active' account allows one to log-in. The 'live' field only
determines what an Examiner is allowed to do once logged-in

--- a/test/fixtures/examiners.yml
+++ b/test/fixtures/examiners.yml
@@ -11,6 +11,7 @@
 #  last_workset_on :datetime
 #  n_assigned      :integer         default(0)
 #  n_graded        :integer         default(0)
+#  live            :boolean         default(FALSE)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
