--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -423,6 +423,22 @@ tab-mng-topics-1 :
     self : verticals/list
     panel : vertical/topics?id=:id
 
+lnk-wb-apprentices : 
+  show : 
+    left : left-9
+    wide : wide-X
+  autoclick :
+    tab : tab-apprentices
+
+tab-apprentices :
+  url :
+    self : examiner/apprentices
+    panel : load/samples?id=:id
+
+lnk-audit-apprentice : 
+  show : 
+    modal : m-audit-apprentice
+
 lnk-wb-schools :
   show : 
     left : left-1
