--- a/test/fixtures/customers.yml
+++ b/test/fixtures/customers.yml
@@ -1,15 +1,12 @@
 # == Schema Information
 #
-# Table name: transactions
+# Table name: customers
 #
 #  id             :integer         not null, primary key
-#  customer_id    :integer
 #  account_id     :integer
-#  quantity       :integer
-#  rate_code_id   :integer
-#  reference_id   :integer
-#  reference_type :integer
-#  memo           :string(255)
+#  credit_balance :integer
+#  cash_balance   :integer
+#  currency       :string(3)
 #  created_at     :datetime        not null
 #  updated_at     :datetime        not null
 #
@@ -18,12 +15,12 @@
 
 one:
   account: 
-  reference_id: 1
-  reference_type: MyString
-  memo: MyString
+  credit_balance: 1
+  cash_balance: 1
+  currency: MyString
 
 two:
   account: 
-  reference_id: 1
-  reference_type: MyString
-  memo: MyString
+  credit_balance: 1
+  cash_balance: 1
+  currency: MyString
