Online 'experienced' examiners can be mentors ...
experience => internal examiners who have graded > 1000 responses
              OR external examiners who have graded > 2000 responses

--- a/test/fixtures/examiners.yml
+++ b/test/fixtures/examiners.yml
@@ -14,6 +14,7 @@
 #  live              :boolean         default(FALSE)
 #  mentor_id         :integer
 #  mentor_is_teacher :boolean         default(FALSE)
+#  internal          :boolean         default(FALSE)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
