--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -182,7 +182,7 @@ tab-grd-panel :
 tab-tc-rc-1 :
   url : 
     self : exams/list
-    panel : exam/summary.json?id=:id
+    # panel : exam/summary.json?id=:id
   autoclick :
     tab : tab-tc-rc-2
 
@@ -190,6 +190,7 @@ tab-tc-rc-2 :
   show :
     wide : wide-chart-1
   url :
+    self : exam/summary?id=:prev
     panel : exam/layout.json?e=:prev&id=:id
   autoclick :
     tab : tab-tc-rc-3
