--- a/test/fixtures/graded_responses.yml
+++ b/test/fixtures/graded_responses.yml
@@ -16,6 +16,7 @@
 #  worksheet_id   :integer
 #  mobile         :boolean         default(FALSE)
 #  disputed       :boolean         default(FALSE)
+#  resolved       :boolean         default(FALSE)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
