[Audit]: Removed error due to reference to non-existent audit/done route

--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -271,6 +271,8 @@ tab-mng-sektions-1 :
 
 lnk-like-question : 
   update-on : question/preview
+  url :
+    self : like?id=:a
 
 lnk-ask-a-question :
   show : 
