[Dispute]: Now requiring justification from student on why he/she ...
... thinks the question should be regraded

The reason is then made available to the grader who can accept / reject
the request

--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -330,11 +330,6 @@ lnk-sk-add-std :
 ## Students 
 ##############################################################################
 
-lnk-dispute: 
-  update-on: view/fdb
-  url:
-    self: dispute?id=:a
-
 lnk-st-rc : 
   autoclick :
     tab : tab-st-rc-1
@@ -402,6 +397,11 @@ tab-teacher-accounts :
 ##############################################################################
 ## Admin / Examiner specific  
 ##############################################################################
+
+lnk-dispute-reason : 
+  url :
+    self : dispute/reason?id=:a
+  update-on: load/dispute
 
 lnk-wb-disputes :
   show : 
