--- a/test/fixtures/transactions.yml
+++ b/test/fixtures/transactions.yml
@@ -2,16 +2,15 @@
 #
 # Table name: transactions
 #
-#  id             :integer         not null, primary key
-#  customer_id    :integer
-#  account_id     :integer
-#  quantity       :integer
-#  rate_code_id   :integer
-#  reference_id   :integer
-#  reference_type :integer
-#  memo           :string(255)
-#  created_at     :datetime        not null
-#  updated_at     :datetime        not null
+#  id                :integer         not null, primary key
+#  accounting_doc_id :integer
+#  account_id        :integer
+#  quantity          :integer
+#  rate_code_id      :integer
+#  reference_id      :integer
+#  reference_type    :integer
+#  created_at        :datetime        not null
+#  updated_at        :datetime        not null
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
