[Work allocation]: First draft of changes to allow explicit specification ...
... by the teacher of how scans should be distributed amongst TAs ( if any )

--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -29,6 +29,16 @@
 ## Teachers 
 ##############################################################################
 
+lnk-def-dist-scheme : 
+  url : 
+    self : def/dist/scheme?id=:b
+  update-on: exam/load
+
+lnk-exam-redistribute : 
+  url : 
+    self : exam/redistribute?id=:b
+  update-on: exam/load
+
 lnk-exam-disputes: 
   show : 
     left : left-9 
