--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -23,6 +23,12 @@
 #    prev : 
 #    id : 
 #    update-on : < list of URLs >
+#    callback : 
+#     pre :    -> pre click
+#     post :   -> post click
+#    childtabs : 
+#     reset : true | false -> unclick child tabs or not before clicking first one
+#
 #
 
 ##############################################################################
@@ -115,6 +121,10 @@ tab-exb-quizzes :
   url : 
     self : quizzes/list
     panel : quiz/preview?id=:id
+
+tab-exb-sektions : 
+  childtabs : 
+    reset : true
 
 tab-exb-sk* :
   url: 
