Renamed sublime_X columns in Video to just X

--- a/test/fixtures/videos.yml
+++ b/test/fixtures/videos.yml
@@ -8,8 +8,8 @@
 #  active         :boolean         default(FALSE)
 #  watchable_id   :integer
 #  watchable_type :string(20)
-#  sublime_uid    :string(20)
-#  sublime_title  :string(70)
+#  uid            :string(20)
+#  title          :string(70)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
