--- a/config/onclick/indie.yml
+++ b/config/onclick/indie.yml
@@ -57,6 +57,8 @@ tab-course-overview :
 
 tab-course-lessons:
   id: tab-my-courses
+  url :
+    self : course/lessons?id=:id
 
 tab-course-quizzes:
   id: tab-my-courses
