Tweaked course listing for students ...
Students can now see content of pre-made courses ( basically quizzes ).
Next step would be to let them
  1. self-subscribe to quizzes
  2. pay to grade

--- a/config/onclick/student.yml
+++ b/config/onclick/student.yml
@@ -90,3 +90,7 @@ lnk-attach-asset :
   show : 
     modal : mng-assets
 
+tab-outln-quizzes : 
+  id: course-outline
+  url : 
+    self : course/quizzes?id=:id
