[big one]: Make worksheets for all previously uncompiled quizzes in a course for a student ...
Tied up loose ends plus tightened the UI.
This commit incorporates many changes in different places - all of which must
work together in the indie offering

--- a/config/onclick/student.yml
+++ b/config/onclick/student.yml
@@ -90,7 +90,8 @@ lnk-attach-asset :
   show : 
     modal : mng-assets
 
-tab-outln-quizzes : 
-  id: course-outline
+tab-expld-quizzes : 
+  prev: course-expld-view
   url : 
-    self : course/quizzes?id=:id
+    self : course/quizzes?id=:prev
+    panel : ping/quiz?id=:id
