Auto-log out inactive teachers after 15 seconds ...
This happens when they login using their own password. However, Admins can still login
and access teacher accounts as normal

--- a/test/fixtures/accounts.yml
+++ b/test/fixtures/accounts.yml
@@ -26,6 +26,7 @@
 #  latitude               :float
 #  longitude              :float
 #  authentication_token   :string(255)
+#  login_allowed          :boolean
 #
 
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
