--- a/config/onclick/admin.yml
+++ b/config/onclick/admin.yml
@@ -47,4 +47,9 @@ tab-teacher-accounts :
     self : byCountry?type=teacher
     panel : inCountry?type=teacher&country=:id
 
-
+lnk-def-rubric : 
+  show : 
+    left: left-11
+    wide: wide-3
+  autoclick :
+    tab : tab-rubrics
