[New Rubric]: Step 1 -> added ability to create new rubrics and criteria ...
Next
----
  (step 2) bind criteria with rubrics
  (step 3) attach rubrics to exams / courses / both

--- a/config/onclick/admin.yml
+++ b/config/onclick/admin.yml
@@ -53,3 +53,8 @@ lnk-def-rubric :
     wide: wide-3
   autoclick :
     tab : tab-rubrics
+
+tab-rubrics : 
+  url : 
+    self : list/rubrics
+    panel : rubric/load?id=:id
