--- a/test/fixtures/teachers.yml
+++ b/test/fixtures/teachers.yml
@@ -9,6 +9,7 @@
 #  updated_at :datetime
 #  school_id  :integer
 #  indie      :boolean         default(TRUE)
+#  rubric_id  :integer
 #
 
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
