Added a way to activate a rubric ...
Only one rubric can be active at any point in time. All other rubrics by
the same teacher / admin will be inactive

The active rubric is what will be attached to any exam made thereafter

--- a/config/onclick/admin.yml
+++ b/config/onclick/admin.yml
@@ -58,3 +58,8 @@ tab-rubrics :
   url : 
     self : list/rubrics
     panel : rubric/load?id=:id
+
+a-activate-rubric : 
+  update-on : rubric/load
+  url : 
+    self : activate/rubric?id=:a
