[editable-rubrics]: Almost done ... Major changes committed
A little clean-up, code rationalization and a few bug-fixes still need
to be done. However, the essential wiring is in place with this commit.

--- a/config/onclick/admin.yml
+++ b/config/onclick/admin.yml
@@ -57,7 +57,7 @@ lnk-def-rubric :
 tab-rubrics : 
   url : 
     self : list/rubrics
-    panel : rubric/load?id=:id
+    panel : rubric/load?id=:id&context=edit
 
 a-activate-rubric : 
   update-on : rubric/load
