--- a/test/fixtures/students.yml
+++ b/test/fixtures/students.yml
@@ -8,7 +8,7 @@
 #  last_name   :string(30)
 #  created_at  :datetime
 #  updated_at  :datetime
-#  uid         :string(20)
+#  shell       :boolean         default(FALSE)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
